--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react-icons": "^4.3.1",
     "react-parallax-tilt": "^1.7.42",
     "react-pdf": "^5.7.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.0.8",
     "react-tsparticles": "^1.42.2",
+    "redux": "^4.2.0",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
   },
